part-2/202/manifests/service_logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-v202-svc
spec:
  type: ClusterIP
  selector:
    app: ex-202
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3333
